# MultiModRAG

./: .gitignore  app.py  config.py  main.py  pyproject.toml
commands/: user.py
core/: file_handle.py
core/utils/: __init__.py  embeddings.py  handler.py  helps.py  layout_analysis.py
